--- a/template.yaml
+++ b/template.yaml
@@ -2,8 +2,8 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: devops-api-wrapper
-  title: DevOps Self-Service
-  description: On demand and stuff
+  title: On demand environements
+  description: Temporary environment in stage k8s cluster
 spec:
   owner: devops
   type: service
