--- a/template.yaml
+++ b/template.yaml
@@ -14,6 +14,9 @@ spec:
         - envDb
         - imageTag
       properties:
+        envName:
+          title: Environment Name
+          type: string
         envDb:
           title: Env DB
           type: string
@@ -27,6 +30,7 @@ spec:
         imageTag:
           title: Image Tag
           type: string
+          default: 1.74.0-release.9e9887f587
         deploymentName:
           title: Deployment name
           type: string
@@ -40,6 +44,7 @@ spec:
           enum:
             - helm-repo
             - github-branch
+          default: github-branch
         githubBranch:
           title: Github branch
           type: string
@@ -67,7 +72,7 @@ spec:
               artifacts:
                 image:
                   repository: yoni/artifacts-internal
-                  tag: 1.71.4-release.e0272776a4
+                  tag: 1.74.0-release.9e9887f587
 
   steps:
     - id: call-devops-api
