--- a/template.yaml
+++ b/template.yaml
@@ -77,33 +77,20 @@ spec:
   steps:
     - id: call-devops-api
       name: On demand env
-      action: shell:execute
+      action: http:post
       input:
-        command: |
-          python3 <<EOF
-          import json
-          import urllib.request
-          
-          data = {
-              "envName": """${{ parameters.envName }}""",
-              "envDb": """${{ parameters.envDb }}""",
-              "oneImageTag": ${{ parameters.oneImageTag }},
-              "imageTag": """${{ parameters.imageTag }}""",
-              "deploymentType": """${{ parameters.deploymentType }}""",
-              "chartSource": """${{ parameters.chartSource }}""",
-              "githubBranch": """${{ parameters.githubBranch }}""",
-              "pathToChartFolder": """${{ parameters.pathToChartFolder }}""",
-              "ttl": """${{ parameters.ttl }}""",
-              "valuesYaml": """${{ parameters.valuesYaml }}"""
-          }
-          
-          req = urllib.request.Request(
-              'http://ondemand-env-service.devops.svc.cluster.local:8080/envs/create',
-              data=json.dumps(data).encode('utf-8'),
-              headers={'Content-Type': 'application/json'}
-          )
-          urllib.request.urlopen(req)
-          EOF
+        url: http://ondemand-env-service.devops.svc.cluster.local:8080/envs/create
+        body:
+          envName: ${{ parameters.envName }}
+          envDb: ${{ parameters.envDb }}
+          oneImageTag: ${{ parameters.oneImageTag }}
+          imageTag: ${{ parameters.imageTag }}
+          deploymentType: ${{ parameters.deploymentType }}
+          chartSource: ${{ parameters.chartSource }}
+          githubBranch: ${{ parameters.githubBranch }}
+          pathToChartFolder: ${{ parameters.pathToChartFolder }}
+          ttl: ${{ parameters.ttl }}
+          valuesYaml: ${{ parameters.valuesYaml }}
 
   output:
     text:
